// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display/Avatar CustomIcon smoke-test 1`] = `
<div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
     data-cy="avatar"
     style="background-color: rgb(25, 118, 210); color: rgb(255, 255, 255);"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="StyleIcon"
       data-cy="avatar-icon"
       style="height: 24px; width: 24px;"
  >
    <path d="m2.53 19.65 1.34.56v-9.03l-2.43 5.86c-.41 1.02.08 2.19 1.09 2.61zm19.5-3.7L17.07 3.98c-.31-.75-1.04-1.21-1.81-1.23-.26 0-.53.04-.79.15L7.1 5.95c-.75.31-1.21 1.03-1.23 1.8-.01.27.04.54.15.8l4.96 11.97c.31.76 1.05 1.22 1.83 1.23.26 0 .52-.05.77-.15l7.36-3.05c1.02-.42 1.51-1.59 1.09-2.6zM7.88 8.75c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-2 11c0 1.1.9 2 2 2h1.45l-3.45-8.34v6.34z">
    </path>
  </svg>
</div>
`;

exports[`Display/Avatar Image smoke-test 1`] = `
<div class="MuiAvatar-root MuiAvatar-circular css-1wlk0hk-MuiAvatar-root"
     data-cy="avatar"
     style="background-color: rgb(25, 118, 210); color: rgb(255, 255, 255);"
>
  <img alt="avatar"
       src="//upload.wikimedia.org/wikipedia/commons/thumb/6/60/Roof_hafez_tomb.jpg/440px-Roof_hafez_tomb.jpg"
       class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
  >
</div>
`;

exports[`Display/Avatar Loading smoke-test 1`] = `
<span class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1gtw0ls-MuiSkeleton-root">
  <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
       data-cy="avatar-loading"
  >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-10mi8st-MuiSvgIcon-root-MuiAvatar-fallback"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="PersonIcon"
    >
      <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z">
      </path>
    </svg>
  </div>
</span>
`;

exports[`Display/Avatar LoadingVariant smoke-test 1`] = `
<span class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-zpjta8-MuiSkeleton-root">
  <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
       data-cy="avatar-loading"
  >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-10mi8st-MuiSvgIcon-root-MuiAvatar-fallback"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="PersonIcon"
    >
      <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z">
      </path>
    </svg>
  </div>
</span>
`;

exports[`Display/Avatar Primary smoke-test 1`] = `
<div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
     data-cy="avatar"
     style="background-color: rgb(25, 118, 210); color: rgb(255, 255, 255);"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="avatar-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
</div>
`;

exports[`Display/Avatar Styled smoke-test 1`] = `
<div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
     data-cy="avatar"
     style="background-color: red; color: white;"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="avatar-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
</div>
`;

exports[`Display/Avatar Text smoke-test 1`] = `
<div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
     data-cy="avatar"
     style="background-color: rgb(25, 118, 210); color: rgb(255, 255, 255);"
>
  <p class="MuiTypography-root MuiTypography-body1 css-5wwosz-MuiTypography-root"
     data-cy="avatar-text"
  >
    MO
  </p>
</div>
`;

exports[`Display/Avatar VariantRounded smoke-test 1`] = `
<div class="MuiAvatar-root MuiAvatar-rounded MuiAvatar-colorDefault css-54qi11-MuiAvatar-root"
     data-cy="avatar"
     style="background-color: rgb(25, 118, 210); color: rgb(255, 255, 255);"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="avatar-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
</div>
`;

exports[`Display/Avatar VariantSquare smoke-test 1`] = `
<div class="MuiAvatar-root MuiAvatar-square MuiAvatar-colorDefault css-18gxrea-MuiAvatar-root"
     data-cy="avatar"
     style="background-color: rgb(25, 118, 210); color: rgb(255, 255, 255);"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="avatar-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
</div>
`;
